[package]
name = "revshell"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
rand_core = { version = "0.6", features = ["std"] }
x25519-dalek = "2.0"
chacha20poly1305 = "0.11.0-rc.2"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3.31"
crossterm = "0.27"

[patch.crates-io]
chacha20 = { path = "./crypto_vendor/stream-ciphers/chacha20" }
